# ai-vibexml-eval

./: .gitignore  README.md  llml_evaluation_anthropic_claude_3.5_haiku_20250731_145801.json  llml_evaluation_anthropic_claude_3.5_haiku_20250731_152048.json  llml_evaluation_anthropic_claude_3.5_haiku_20250731_161844.json  llml_evaluation_anthropic_claude_3.5_sonnet_judge_openai_gpt_4o_20250731_123423.json  pyproject.toml
vibexml_evaluation/: __init__.py  academic_enhancements.py  evaluator.py  judge.py  providers.py  run_evaluation.py  runner.py  test_cases.py  test_framework.py
vibexml_evaluation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
